[workspace]
members = [
    #"problem-1-duplicate-const-generic",
    #"problem-2-trait-extends",
    "unit-clarification",
    "unit-transform",
    "unit-transform-2",
    "unit-transform-3",
    "unit-transform-4",
    "unit-transform-less-generic",
    "unit-transform-mod",
    "too-many-linked-list",
]