[workspace]
members = [
    #"problem-1-duplicate-const-generic",
    #"problem-2-trait-extends",
    "unit-clarification",

    #`f64` is forbidden as the type of a const generic parameter
    #"unit-transform",
    #"unit-transform-2",
    #"unit-transform-3",
    #"unit-transform-4",
    #"unit-transform-less-generic",
    #"unit-transform-mod",
    
    "too-many-linked-list",
    "advanced_fn",
]