# https://doc.rust-lang.org/rust-by-example/generics/phantom/testcase_units.html
[package]
name = "unit-clarification"
version = "0.1.0"
authors = ["VirusCamp <viruscamp@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
